refactor: extrae validaciones repetidas en Cancha/Establecimiento/ReservaService
- agrega EntityNotFoundException (404) y un handler catch-all para excepciones no controladas (500)
- restringe los endpoints de listado de reservas por cancha y por establecimiento a OWNER y ADMIN, filtrando por el usuario autenticado (antes tambien permitian PLAYER sin filtro)