@@ -4,11 +4,12 @@ import com.matiasmeira.sacaladelangulo.auth.model.PlanSuscripcion;
 import com.matiasmeira.sacaladelangulo.auth.model.Role;
 import com.matiasmeira.sacaladelangulo.auth.model.Usuario;
 import com.matiasmeira.sacaladelangulo.auth.repository.UsuarioRepository;
+import com.matiasmeira.sacaladelangulo.core.exception.EntityNotFoundException;
 import com.matiasmeira.sacaladelangulo.establecimiento.dto.EstablecimientoRequest;
 import com.matiasmeira.sacaladelangulo.establecimiento.dto.EstablecimientoResponse;
+import com.matiasmeira.sacaladelangulo.establecimiento.dto.HorarioAtencionDto;
 import com.matiasmeira.sacaladelangulo.establecimiento.model.Cancha;
 import com.matiasmeira.sacaladelangulo.establecimiento.model.Establecimiento;
-import com.matiasmeira.sacaladelangulo.establecimiento.dto.HorarioAtencionDto;
 import com.matiasmeira.sacaladelangulo.establecimiento.model.HorarioAtencion;
 import com.matiasmeira.sacaladelangulo.establecimiento.repository.CanchaRepository;
 import com.matiasmeira.sacaladelangulo.establecimiento.repository.EstablecimientoRepository;
@@ -22,7 +23,10 @@ import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.time.LocalTime;
 import java.util.ArrayList;
+import java.util.HashSet;
 import java.util.List;
+import java.util.Map;
+import java.util.Set;
 import java.util.stream.Collectors;
 
 /**
@@ -33,17 +37,18 @@ import java.util.stream.Collectors;
 @Transactional
 public class EstablecimientoService {
 
+    /** Ventana de disponibilidad usada por la búsqueda rápida de establecimientos. */
+    private static final int VENTANA_DISPONIBILIDAD_MINUTOS = 60;
+
     private final EstablecimientoRepository establecimientoRepository;
     private final UsuarioRepository usuarioRepository;
     private final ReservaRepository reservaRepository;
     private final CanchaRepository canchaRepository;
 
     public EstablecimientoResponse crearEstablecimiento(EstablecimientoRequest request, String email) {
-        Usuario dueno = usuarioRepository.findByEmail(email)
-                .orElseThrow(() -> new IllegalArgumentException("Usuario no encontrado"));
+        Usuario dueno = buscarUsuarioPorEmail(email);
 
-        boolean requiereSenaForzada = dueno.getPlanSuscripcion() == PlanSuscripcion.TRIAL ||
-                dueno.getPlanSuscripcion() == PlanSuscripcion.FREE;
+        boolean requiereSenaForzada = esPlanLimitado(dueno.getPlanSuscripcion());
 
         Establecimiento establecimiento = Establecimiento.builder()
                 .nombre(request.nombre())
@@ -55,31 +60,29 @@ public class EstablecimientoService {
                 .dueno(dueno)
                 .build();
 
-        if (request.horariosAtencion() != null) {
-            establecimiento.setHorariosAtencion(request.horariosAtencion().stream()
-                    .map(dto -> HorarioAtencion.builder()
-                            .diaSemana(dto.diaSemana())
-                            .horaApertura(dto.horaApertura())
-                            .horaCierre(dto.horaCierre())
-                            .establecimiento(establecimiento)
-                            .build())
-                    .collect(Collectors.toList()));
-        }
+        establecimiento.setHorariosAtencion(mapearHorarios(request.horariosAtencion(), establecimiento));
 
         Establecimiento establecimientoGuardado = establecimientoRepository.save(establecimiento);
 
         return mapToResponse(establecimientoGuardado);
     }
 
+    @Transactional(readOnly = true)
     public List<EstablecimientoResponse> obtenerMisEstablecimientos(String email) {
-        Usuario dueno = usuarioRepository.findByEmail(email)
-                .orElseThrow(() -> new IllegalArgumentException("Usuario no encontrado"));
+        Usuario dueno = buscarUsuarioPorEmail(email);
 
         return establecimientoRepository.findByDuenoIdAndIsActiveTrue(dueno.getId()).stream()
                 .map(this::mapToResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
+    /**
+     * Busca establecimientos cercanos y, si se indica fecha/hora, filtra a los que tengan
+     * al menos una cancha libre en esa ventana. Resuelto en un puñado de consultas en lote
+     * (en vez de una consulta por establecimiento y otra por cancha) para que este endpoint
+     * público no degrade con el volumen de datos.
+     */
+    @Transactional(readOnly = true)
     public List<EstablecimientoResponse> buscarEstablecimientos(Double latitud, Double longitud, Double distanciaKm, String deporte, LocalDate fecha, LocalTime hora) {
         Double radioBusqueda = (distanciaKm != null && distanciaKm > 0) ? distanciaKm : 10.0;
         List<Establecimiento> establecimientosCercanos = establecimientoRepository.findCercanosYPorDeporte(latitud, longitud, radioBusqueda, deporte);
@@ -87,78 +90,92 @@ public class EstablecimientoService {
         if (fecha == null || hora == null) {
             return establecimientosCercanos.stream()
                     .map(this::mapToResponse)
-                    .collect(Collectors.toList());
+                    .toList();
         }
+
+        List<Long> establecimientoIds = establecimientosCercanos.stream().map(Establecimiento::getId).toList();
+        List<Cancha> canchas = canchaRepository.findByEstablecimientoIdInAndIsActiveTrue(establecimientoIds);
+        if (deporte != null) {
+            canchas = canchas.stream()
+                    .filter(c -> c.getDeporte().equalsIgnoreCase(deporte))
+                    .toList();
+        }
+
+        Map<Long, List<Cancha>> canchasPorEstablecimiento = canchas.stream()
+                .collect(Collectors.groupingBy(c -> c.getEstablecimiento().getId()));
 
         LocalDateTime inicioReserva = LocalDateTime.of(fecha, hora);
-        LocalDateTime finReserva = inicioReserva.plusMinutes(60);
+        LocalDateTime finReserva = inicioReserva.plusMinutes(VENTANA_DISPONIBILIDAD_MINUTOS);
 
-        List<Establecimiento> establecimientosConDisponibilidad = new ArrayList<>();
+        List<Long> canchaIds = canchas.stream().map(Cancha::getId).toList();
+        Set<Long> canchasOcupadas = canchaIds.isEmpty()
+                ? Set.of()
+                : new HashSet<>(reservaRepository.findCanchaIdsConSolapamiento(canchaIds, inicioReserva, finReserva));
 
-        for (Establecimiento est : establecimientosCercanos) {
-            List<Cancha> canchasDelPredio = canchaRepository.findByEstablecimientoIdAndIsActiveTrue(est.getId());
-            if (deporte != null) {
-                canchasDelPredio = canchasDelPredio.stream()
-                        .filter(c -> c.getDeporte().equalsIgnoreCase(deporte))
-                        .toList();
-            }
-
-            boolean tieneAlMenosUnaCanchaLibre = false;
-
-            for (Cancha cancha : canchasDelPredio) {
-                long solapadas = reservaRepository.countReservasSolapadas(List.of(cancha.getId()), inicioReserva, finReserva);
-                if (solapadas == 0) {
-                    tieneAlMenosUnaCanchaLibre = true;
-                    break;
-                }
-            }
-
-            if (tieneAlMenosUnaCanchaLibre) {
-                establecimientosConDisponibilidad.add(est);
-            }
-        }
-
-        return establecimientosConDisponibilidad.stream()
+        return establecimientosCercanos.stream()
+                .filter(est -> canchasPorEstablecimiento.getOrDefault(est.getId(), List.of()).stream()
+                        .anyMatch(c -> !canchasOcupadas.contains(c.getId())))
                 .map(this::mapToResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public EstablecimientoResponse actualizarEstablecimiento(Long id, EstablecimientoRequest request, String email) {
-        Establecimiento establecimiento = establecimientoRepository.findById(id)
-                .orElseThrow(() -> new IllegalArgumentException("Establecimiento no encontrado"));
-
-        Usuario usuarioAutenticado = usuarioRepository.findByEmail(email)
-                .orElseThrow(() -> new IllegalArgumentException("Usuario no encontrado"));
-
-        if (usuarioAutenticado.getRol() != Role.ADMIN && !establecimiento.getDueno().getEmail().equals(email)) {
-            throw new AccessDeniedException("No autorizado para modificar este establecimiento");
-        }
+        Establecimiento establecimiento = buscarEstablecimientoPorId(id);
+        Usuario usuarioAutenticado = validarPropietario(establecimiento, email);
 
         establecimiento.setNombre(request.nombre());
         establecimiento.setDireccion(request.direccion());
         establecimiento.setLatitud(request.latitud());
         establecimiento.setLongitud(request.longitud());
-        establecimiento.setRequiereSena(usuarioAutenticado.getPlanSuscripcion() == PlanSuscripcion.TRIAL ||
-                usuarioAutenticado.getPlanSuscripcion() == PlanSuscripcion.FREE ||
-                request.requiereSena());
+        establecimiento.setRequiereSena(esPlanLimitado(usuarioAutenticado.getPlanSuscripcion()) || request.requiereSena());
 
         if (establecimiento.getHorariosAtencion() == null) {
-            establecimiento.setHorariosAtencion(new java.util.ArrayList<>());
+            establecimiento.setHorariosAtencion(new ArrayList<>());
         }
         establecimiento.getHorariosAtencion().clear();
-        if (request.horariosAtencion() != null) {
-            establecimiento.getHorariosAtencion().addAll(request.horariosAtencion().stream()
-                    .map(dto -> HorarioAtencion.builder()
-                            .diaSemana(dto.diaSemana())
-                            .horaApertura(dto.horaApertura())
-                            .horaCierre(dto.horaCierre())
-                            .establecimiento(establecimiento)
-                            .build())
-                    .collect(Collectors.toList()));
-        }
+        establecimiento.getHorariosAtencion().addAll(mapearHorarios(request.horariosAtencion(), establecimiento));
 
         Establecimiento establecimientoActualizado = establecimientoRepository.save(establecimiento);
         return mapToResponse(establecimientoActualizado);
+    }
+
+    private boolean esPlanLimitado(PlanSuscripcion plan) {
+        return plan == PlanSuscripcion.TRIAL || plan == PlanSuscripcion.FREE;
+    }
+
+    private List<HorarioAtencion> mapearHorarios(List<HorarioAtencionDto> horarios, Establecimiento establecimiento) {
+        if (horarios == null) {
+            return new ArrayList<>();
+        }
+        return horarios.stream()
+                .map(dto -> HorarioAtencion.builder()
+                        .diaSemana(dto.diaSemana())
+                        .horaApertura(dto.horaApertura())
+                        .horaCierre(dto.horaCierre())
+                        .establecimiento(establecimiento)
+                        .build())
+                .collect(Collectors.toList());
+    }
+
+    private Usuario buscarUsuarioPorEmail(String email) {
+        return usuarioRepository.findByEmail(email)
+                .orElseThrow(() -> new EntityNotFoundException("Usuario no encontrado"));
+    }
+
+    private Establecimiento buscarEstablecimientoPorId(Long id) {
+        return establecimientoRepository.findById(id)
+                .orElseThrow(() -> new EntityNotFoundException("Establecimiento no encontrado"));
+    }
+
+    /**
+     * Valida que el usuario autenticado sea el dueño del establecimiento o un administrador.
+     */
+    private Usuario validarPropietario(Establecimiento establecimiento, String email) {
+        Usuario usuarioAutenticado = buscarUsuarioPorEmail(email);
+        if (usuarioAutenticado.getRol() != Role.ADMIN && !establecimiento.getDueno().getId().equals(usuarioAutenticado.getId())) {
+            throw new AccessDeniedException("No autorizado para modificar este establecimiento");
+        }
+        return usuarioAutenticado;
     }
 
     private EstablecimientoResponse mapToResponse(Establecimiento establecimiento) {
@@ -171,9 +188,9 @@ public class EstablecimientoService {
                 establecimiento.getRequiereSena(),
                 establecimiento.getIsActive(),
                 establecimiento.getDueno().getId(),
-                establecimiento.getHorariosAtencion() == null ? java.util.List.of() : establecimiento.getHorariosAtencion().stream()
+                establecimiento.getHorariosAtencion() == null ? List.of() : establecimiento.getHorariosAtencion().stream()
                         .map(h -> new HorarioAtencionDto(h.getDiaSemana(), h.getHoraApertura(), h.getHoraCierre()))
-                        .collect(Collectors.toList())
+                        .toList()
         );
     }
 }
